--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/TopicPost.css
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Content/assets/TopicPost.css
@@ -33,3 +33,19 @@
     border: 0px;
     background-color: white;
 }
+.Edit-post-temp > input{
+    max-width: 100%;
+    width: 100%;
+    border: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    background-color: white;
+    text-transform: lowercase;
+}
+.EditPost-textArea{
+    max-width: 100%;
+    width: 100%;
+    height: 120px;
+    text-align: justify
+}
