--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/Posts/_PartialCreate.cshtml
@@ -1,93 +1,78 @@
 ﻿@model Dr4rum_eProjectIII.Models.Post
+<link rel="stylesheet" type="text/css" href="~/Content/assets/TopicPost.css">
 <style>
-    .TopicTitle {
-        background-color: darkseagreen;
-    }
-
-        .TopicTitle > h5 {
-            font-weight: bold;
-            height: auto;
-            padding-bottom: 5px !important;
-            padding-top: 5px !important;
-            padding-right: 5px !important;
-            padding-left: 5px !important;
-        }
-    .BodyTile{
-        border-bottom: 1px solid gray;
+    .hide {
+        display: none
     }
 </style>
 <!--Header-->
-<div class="modal-header TopicTitle">
-    <h5 class="modal-title">
-        Add Post
-    </h5>
-
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
+<div class="modal-header alert alert-success">
+    <h5 class="modal-title">Add Post</h5>
+    <button type="button" class="close" data-dismiss="modal" ariahidden="true">×</button>
 </div>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <div class="form">
-        <!-- Modal -->
-        <div class="modal-body BodyTile">
+    <div class="modal-body">
+        <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <!-- Body -->
-            <h5 class="modal-title ">
-                @{
-                    var topicTitle = TempData["data"];
-                }
-                @Html.TextBoxFor(model => model.Topic_Tile, new { @Value = topicTitle.ToString(), htmlAttributes = new { @class = "form-control" } })
-            </h5>
+            <div class="form-group row ">
+                <div class="control-label col-md-12 TopicDelete-title">Topic Title</div>
+                <div class="col-md-12 Edit-post-temp">
+                    @{
+                        var topicTitle = Session["topic"];
+                    }
+                    @Html.TextBoxFor(model => model.Topic_Tile, new { @Value = topicTitle.ToString(), htmlAttributes = new { @class = "formcontrol required TopicDelete-formControl", @disabled = "disabled", @id = "TopicDelete-overflow" } })
+                </div>
+            </div>
 
-            <div class="form-group row invisible">
+            <div class="form-group row hide">
                 <div class="col-sm-10">
                     @Html.TextBoxFor(model => model.Acc_ID, new { @Value = 1, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
-            <div class="form-group">
-                <label for="exampleFormControlTextarea1">Post Info</label>
-                <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Post_Info, new { htmlAttributes = new { @class = "form-control" } })
+            <div class="form-group row">
+                <div class="control-label col-md-12 TopicDelete-title">Topic information</div>
+                <div class="col-md-12">
+                    @Html.TextAreaFor(model => model.Post_Info, new { @class = "form-control EditPost-textArea" })
                     @Html.ValidationMessageFor(model => model.Post_Info, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group invisible">
+            <div class="form-group hide">
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Like_Num, new { @Value = 0, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
-            <div class="form-group invisible">
+            <div class="form-group hide">
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.Dislike_Num, new { @Value = 0, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
-            <div class="form-group invisible">
+            <div class="form-group hide">
                 <div class="col-md-10">
                     @{
-                        DateTime currentDay = DateTime.Now;
+                        DateTime currentdate = DateTime.Now;
+                        var currDay = currentdate.ToString("dd/MM/yyyy");
                     }
-                    @Html.TextBoxFor(model => model.date, new { @Value = currentDay, htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextBoxFor(model => model.date, new { @Value = currDay, htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
         </div>
 
         <!-- Footer -->
         <div class="modal-footer">
-            <input type="submit" value="Add" class="btn btn-default btn-primary" />
+            <input type="submit" value="Add" class="btn btn-default btn-success" />
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
     </div>
- }
+}
 <script>
     $("form").removeData("validator");
     $("form").removeData("unobtrusiveValidation");
     $.validator.unobtrusive.parse("form");
 </script>
-    
