--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Login.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Login.cshtml
@@ -1,40 +1,33 @@
 ﻿@model Dr4rum_eProjectIII.Models.Account
 @{
     ViewBag.Title = "Login";
-}
-
-
-<h2>Login</h2>
-
+}<h2>Login</h2>
 @using (Html.BeginForm("Login", "UserAccount", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Use a local account to log in.</h4>
     <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="Login-info-contain" style="border: 1px solid #b2b0b0; border-radius: 5px">
+        <div class="form-group">
+            @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control"})
+                @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger"})
+            </div>
+        </div>
+    </div>
     <span class="text-danger">@ViewBag.ErrorMessage</span>
 
-
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-    <div class="form-group">
-        @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
+    <div class="form-group" style="margin-top: 10px">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Log in" class="btn btn-default" />
-
         </div>
     </div>
 
