--- a/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
+++ b/Dr4rum_eProjectIII/Dr4rum_eProjectIII/Views/UserAccount/Information.cshtml
@@ -84,7 +84,7 @@
         }
     </div>
     <div class="p-5">
-        @Html.ActionLink("Edit Information", "EditInformation", "UserAccount",null,new { @class = "btn btn-primary"})
+        @*@Html.ActionLink("Edit Information", "EditInformation", "UserAccount",null,new { @class = "btn btn-primary"})*@
         @Html.ActionLink("Change Password", "ChangePassword", "UserAccount",null,new { @class = "btn btn-primary"  })
     </div>
 </div>
